@@ -9,7 +9,7 @@
  */
 bool get_contents_from_file(const Glib::ustring &uri, const Glib::ustring &charset, Glib::ustring &utf8_contents, Glib::ustring &charset_contents, int max_data_size)
 {
-	se_debug_message(SE_DEBUG_UTILITY, "Try to get contents from file uri=%s with charset=%s", uri.c_str(), charset.c_str());
+	se_debug_message(SE_DEBUG_IO, "Try to get contents from file uri=%s with charset=%s", uri.c_str(), charset.c_str());
 
 	try
 	{
@@ -26,7 +26,7 @@ bool get_contents_from_file(const Glib::ustring &uri, const Glib::ustring &chars
 			// Try to autodetect
 			utf8_contents = Encoding::convert_to_utf8(content, charset_contents);
 
-			se_debug_message(SE_DEBUG_UTILITY, 
+			se_debug_message(SE_DEBUG_IO, 
 					"Success to get the contents of the file %s with %s charset", 
 					uri.c_str(), charset_contents.c_str());
 				
@@ -37,7 +37,7 @@ bool get_contents_from_file(const Glib::ustring &uri, const Glib::ustring &chars
 			// try with charset
 			utf8_contents = Encoding::convert_to_utf8_from_charset(content, charset);
 
-			se_debug_message(SE_DEBUG_UTILITY, 
+			se_debug_message(SE_DEBUG_IO, 
 					"Success to get the contents of the file %s with %s charset", 
 					uri.c_str(), charset.c_str());
 					return true;
@@ -96,15 +96,22 @@ Glib::ustring FileReader::get_charset() const
  */
 Glib::ustring FileReader::get_newline()
 {
+	Glib::ustring newline;
+
 	if(Glib::Regex::match_simple("\\r\\n", m_data))
-		return "Windows";
+		newline = "Windows";
 	else if(Glib::Regex::match_simple("\\r", m_data))
-		return "Macintosh";
+		newline = "Macintosh";
 	else if(Glib::Regex::match_simple("\\n", m_data))
-		return "Unix";
+		newline = "Unix";
+	else
+	{
+		newline = "Unix";
+	}
+	se_debug_message(SE_DEBUG_IO, "newline=%s", newline.c_str());
 
 	// default
-	return "Unix";
+	return newline;
 }
 
 /*
@@ -115,16 +122,23 @@ bool FileReader::getline(Glib::ustring &line)
 	// init only if needs
 	if(m_lines_init == false)
 	{
+		se_debug_message(SE_DEBUG_IO, "split lines...");
+
 		m_lines = Glib::Regex::split_simple("\\R", m_data); 
 		m_iter = m_lines.begin();
 		m_lines_init = true;
 	}
 
 	if(m_iter == m_lines.end())
+	{
+		se_debug_message(SE_DEBUG_IO, "EOF");
 		return false;
+	}
 
 	line = *m_iter;
-		++m_iter;
+	++m_iter;
+
+	se_debug_message(SE_DEBUG_IO, "\"%s\"", line.c_str());
 
 	return true;
 }
