@@ -1,5 +1,13 @@
 2008-10-06  kitone  <kitone@gna.org>
 
+	* src/FileReader.cc:
+	* src/formats/AdvancedSubStationAlpha.h:
+	* src/formats/MPsub.h:
+	* src/formats/SubStationAlpha.h:
+	Add debug msg.
+
+2008-10-06  kitone  <kitone@gna.org>
+
 	* src/Subtitle.cc:
 	* src/utility.cc:
 	* src/utility.h:
